# HiperespectralCompression

./: instructions.txt
Release/: HyperspectralCompression
Source/: compile.sh
Source/Code/Core/: CMakeLists.txt  bip2bsq.cpp  callback.cpp  callback.h  compression2D.cpp  compression3D.cpp  decode.cpp  main.cpp  statistics.cpp  statistics3D.cpp  utils2D.h  utils3D.h
Source/Code/Core/lib/: convert.cpp  convert.h  j2k.cpp  opj_config_private.h  t1_generate_luts.cpp
Source/Code/Core/lib3D/: bio.cpp  cio.cpp  convert.cpp  convert.h  dwt.cpp  event.cpp  event.h  jp3d.cpp  jp3d.h  jp3d_lib.cpp  jp3d_lib.h  mqc.cpp  openjp3d.cpp  openjp3d.h  pi.cpp  raw.cpp  t1.cpp  t1_3d.cpp  t2.cpp  tcd.cpp  tgt.cpp  volume.cpp
Source/Code/UI/: Makefile  QTCompression.pro  dialog.cpp  dialog.h  dialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  normalize.cpp  normalize.h
